--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,8 @@
     year = {2022},
     booktitle = {Workshop on Bridging the Gap Between AI Planning and Reinforcement Learning (PRL@ICAPS'22)},
     bibtex_show={true},
-    pdf={22-PRL-DAC4AIPlanning.pdf},
+    pdf={paper/22-PRL-DAC4AIPlanning.pdf},
+    slides={slides/2022_DIHeuSel@PRL-ICAPS.pdf},
     abstract={Since its proposal over a decade ago, LAMA has been considered one of the best-performing satisficing classical planners. Its key component is heuristic search with multiple open
               lists, each using a different heuristic function to order states. Even with a very simple, ad-hoc policy for open list selection, LAMA achieves state-of-the-art results. In this paper, we
               propose to use dynamic algorithm configuration to learn such policies in a principled and data-driven manner. On the learning side, we show how to train a reinforcement learning agent
@@ -37,7 +38,7 @@
     year = {2022},
     arxiv = {arXiv:2202.03259},
     booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference ({GECCO}'22)},
-    pdf = {22-gecco.pdf},
+    pdf = {paper/22-gecco.pdf},
     note = {Joint first authorship: André Biedenkapp \& Nguyen Dang \& Martin S. Krejca, <a href="https://gecco-2022.sigevo.org/Best-Paper-Nominations">Won the best paper award on the GECH track.</a>},
     website = {https://www.automl.org/automated-algorithm-design/dac/},
     code = {https://github.com/ndangtt/LeadingOnesDAC},
@@ -59,7 +60,7 @@
     volume = {74},
     arxiv = {arXiv:2201.03916},
     doi = {10.1613/jair.1.13596},
-    pdf = {22-JAIR-AutoRL.pdf},
+    pdf = {paper/22-JAIR-AutoRL.pdf},
     selected = {true},
     abstract = {The combination of Reinforcement Learning (RL) with deep learning has led to a series of impressive feats, with many believing (deep) RL provides a path towards generally capable agents. However, the success of RL agents is often highly sensitive to design choices in the training process, which may require tedious and error-prone manual tuning. This makes it challenging to use RL for new problems, while also limits its full potential. In many other areas of machine learning, AutoML has shown it is possible to automate such design choices and has also yielded promising initial results when applied to RL. However, Automated Reinforcement Learning (AutoRL) involves not only standard applications of AutoML but also includes additional challenges unique to RL, that naturally produce a different set of methods. As such, AutoRL has been emerging as an important area of research in RL, providing promise in a variety of applications from RNA design to playing games such as Go. Given the diversity of methods and environments considered in RL, much of the research has been conducted in distinct subfields, ranging from meta-learning to evolution. In this survey we seek to unify the field of AutoRL, we provide a common taxonomy, discuss each area in detail and pose open problems which would be of interest to researchers going forward.}
 }
@@ -100,7 +101,7 @@
     pages = {1-9},
     arxiv = {2109.09831},
     code = {https://github.com/automl/SMAC3},
-    pdf = {21-0888.pdf},
+    pdf = {paper/21-0888.pdf},
     abstract = {Algorithm parameters, in particular hyperparameters of machine learning algorithms, can substantially impact their performance. To support users in determining well-performing hyperparameter configurations for their algorithms, datasets and applications at hand, SMAC3 offers a robust and flexible framework for Bayesian Optimization, which can improve performance within a few evaluations. It offers several facades and pre-sets for typical use cases, such as optimizing hyperparameters, solving low dimensional continuous (artificial) global optimization problems and configuring algorithms to perform well across multiple problem instances. The SMAC3 package is available under a permissive BSD-license at https://github.com/automl/SMAC3. }
 }
 
@@ -112,6 +113,7 @@
     journal = {arXiv:2110.02102},
     arxiv = {arXiv:2110.02102},
     code = {https://github.com/automl/CARL},
+    pdf ={https://arxiv.org/pdf/2110.0210.pdf},
     bibtex_show={true},
     abstract = {While Reinforcement Learning has made great strides towards solving ever more complicated tasks, many algorithms are still brittle to even slight changes in their environment. This is a limiting factor for real-world applications of RL. Although the research community continuously aims at improving both robustness and generalization of RL algorithms, unfortunately it still lacks an open-source set of well-defined benchmark problems based on a consistent theoretical framework, which allows comparing different approaches in a fair, reliable and reproducibleway. To fill this gap, we propose CARL, a collection of well-known RL environments extended to contextual RL problems to study generalization. We show the urgent need of such benchmarks by demonstrating that even simple toy environments become challenging for commonly used approaches if different contextual instances of this task have to be considered. Furthermore, CARL allows us to provide first evidence that disentangling representation learning of the states from the policy learning with the context facilitates better generalization. By providing variations of diverse benchmarks from classic control, physical simulations, games and a real-world application of RNA design, CARL will allow the community to derive many more such insights on a solid empirical foundation. }
 }
@@ -129,17 +131,17 @@
     arxiv = {2105.08541},
     blog = {https://www.automl.org/dacbench-benchmarking-dynamic-algorithm-configuration/},
     talk = {https://www.youtube.com/watch?v=-G-hLmBI4WM},
-    pdf = {21-IJCAI-DACBench.pdf},
-    supp = {21-IJCAI-DACBench-supp.pdf},
+    pdf = {paper/21-IJCAI-DACBench.pdf},
+    supp = {paper/21-IJCAI-DACBench-supp.pdf},
     abstract = {Dynamic Algorithm Configuration (DAC) aims to dynamically control a target algorithm's hyperparameters in order to improve its performance. Several theoretical and empirical results have demonstrated the benefits of dynamically controlling hyperparameters in domains like evolutionary computation, AI Planning or deep learning. Replicating these results, as well as studying new methods for DAC, however, is difficult since existing benchmarks are often specialized and incompatible with the same interfaces. To facilitate benchmarking and thus research on DAC, we propose DACBench, a benchmark library that seeks to collect and standardize existing DAC benchmarks from different AI domains, as well as provide a template for new ones. For the design of DACBench, we focused on important desiderata, such as (i) flexibility, (ii) reproducibility, (iii) extensibility and (iv) automatic documentation and visualization. To show the potential, broad applicability and challenges of DAC, we explore how a set of six initial benchmarks compare in several dimensions of difficulty. },
 }
 
 @InProceedings{speck-et-al-icaps2021b,
-    pdf =          "21-ICAPS-DAC-PLAN.pdf",
+    pdf =          "paper/21-ICAPS-DAC-PLAN.pdf",
     code =         "https://github.com/speckdavid/rl-plan",
     arxiv =        "2006.08246",
     bibtex_show={true},
-    poster =       "21-ICAPS-DAC-PLAN-poster.pdf",
+    poster =       "poster/21-ICAPS-DAC-PLAN-poster.pdf",
     author =       "David Speck and Andr{\'e} Biedenkapp and Frank Hutter and Robert Mattm{\"u}ller and Marius Lindauer",
     title =        "Learning Heuristic Selection with Dynamic Algorithm Configuration",
     editor =       "Robert P. Goldman and Susanne Biundo and Michael Katz",
@@ -184,8 +186,9 @@
     code = {https://github.com/automl/TempoRL},
     arxiv = {2106.05262},
     talk = {https://slideslive.com/38959338/temporl-learning-when-to-act},
-    pdf = {biedenkapp21a.pdf},
-    supp = {biedenkapp21a-supp.pdf},
+    pdf = {paper/biedenkapp21a.pdf},
+    supp = {paper/biedenkapp21a-supp.pdf},
+    slides = {slides/2021_TempoRL@ICML.pdf},
     blog = {https://andrebiedenkapp.github.io/blog/2022/temporl},
     selected = {true},
     abstract = {Reinforcement learning is a powerful approach to learn behaviour through interactions with an environment. However, behaviours are usually learned in a purely reactive fashion, where an appropriate action is selected based on an observation. In this form, it is challenging to learn when it is necessary to execute new decisions. This makes learning inefficient, especially in environments that need various degrees of fine and coarse control. To address this, we propose a proactive setting in which the agent not only selects an action in a state but also for how long to commit to that action. Our TempoRL approach introduces skip connections between states and learns a skip-policy for repeating the same action along these skips. We demonstrate the effectiveness of TempoRL on a variety of traditional and deep RL environments, showing that our approach is capable of learning successful policies up to an order of magnitude faster than vanilla Q-learning.}
@@ -201,9 +204,9 @@
     arxiv = {2106.05110},
     talk = {https://slideslive.com/38959253/selfpaced-context-evaluation-for-contextual-reinforcement-learning},
     blog = {https://www.automl.org/self-paced-context-evaluation-for-contextual-reinforcement-learning/},
-    pdf = {eimer21a.pdf},
-    supp = {eimer21a-supp.pdf},
-    poster = {21-ICML-SPaCE-poster.pdf},
+    pdf = {paper/eimer21a.pdf},
+    supp = {paper/eimer21a-supp.pdf},
+    poster = {poster/21-ICML-SPaCE-poster.pdf},
     abstract = {Reinforcement learning (RL) has made a lot of advances for solving a single problem in a given environment; but learning policies that generalize to unseen variations of a problem remains challenging. To improve sample efficiency for learning on such instances of a problem domain, we present Self-Paced Context Evaluation (SPaCE). Based on self-paced learning, \spc automatically generates \task curricula online with little computational overhead. To this end, SPaCE leverages information contained in state values during training to accelerate and improve training performance as well as generalization capabilities to new instances from the same problem domain. Nevertheless, SPaCE is independent of the problem domain at hand and can be applied on top of any RL agent with state-value function approximation. We demonstrate SPaCE's ability to speed up learning of different value-based RL agents on two environments, showing better generalization capabilities and up to 10x faster learning compared to naive approaches such as round robin or SPDRL, as the closest state-of-the-art approach.}
 }
 
@@ -216,8 +219,9 @@
     journal = {Workshop on Automated Machine Learning (AutoML@ICML'21)},
     code = {https://github.com/automl/multi-obj-baselines},
     arxiv = {2105.01015},
+    pdf = {https://arxiv.org/pdf/2105.01015.pdf},
     talk = {https://slideslive.com/38962449/bag-of-baselines-for-multiobjective-joint-neural-architecture-search-and-hyperparameter-optimization},
-    poster = {21-ARXIV-BBMoNASHPO-poster.pdf},
+    poster = {poster/21-ARXIV-BBMoNASHPO-poster.pdf},
     abstract = {Neural architecture search (NAS) and hyperparameter optimization (HPO) make deep learning accessible to non-experts by automatically finding the architecture of the deep neural network to use and tuning the hyperparameters of the used training pipeline. While both NAS and HPO have been studied extensively in recent years, NAS methods typically assume fixed hyperparameters and vice versa - there exists little work on joint NAS + HPO. Furthermore, NAS has recently often been framed as a multi-objective optimization problem, in order to take, e.g., resource requirements into account. In this paper, we propose a set of methods that extend current approaches to jointly optimize neural architectures and hyperparameters with respect to multiple objectives. We hope that these methods will serve as simple baselines for future research on multi-objective joint NAS + HPO. To facilitate this, all our code is available at this https URL. }
 }
 
@@ -227,6 +231,7 @@
     year = {2021},
     bibtex_show={true},
     arxiv = {1909.07750},
+    pdf = {https://arxiv.org/pdf/1909.07750.pdf},
     journal = {arXiv:1909.07750 [cs.LG]},
     code = {https://github.com/automl/mdp-playground},
     abstract = {We present \emph{MDP Playground}, an efficient testbed for Reinforcement Learning (RL) agents with \textit{orthogonal} dimensions that can be controlled independently to challenge agents in different ways and obtain varying degrees of hardness in generated environments. We consider and allow control over a wide variety of dimensions, including \textit{delayed rewards}, \textit{rewardable sequences}, \textit{density of rewards}, \textit{stochasticity}, \textit{image representations}, \textit{irrelevant features}, \textit{time unit}, \textit{action range} and more. We define a parameterised collection of fast-to-run toy environments in \textit{OpenAI Gym} by varying these dimensions and propose to use these for the initial design and development of agents. We also provide wrappers that inject these dimensions into complex environments from \textit{Atari} and \textit{Mujoco} to allow for evaluating agent robustness. We further provide various example use-cases and instructions on how to use \textit{MDP Playground} to design and debug agents. We believe that \textit{MDP Playground} is a valuable testbed for researchers designing new, adaptive and intelligent RL agents and those wanting to unit test their agents.}
@@ -242,6 +247,7 @@
     website = {https://openreview.net/forum?id=hSjxQ3B7GWq},
     code = {https://github.com/automl/SEARL},
     arxiv = {2009.01555},
+    pdf = {https://arxiv.org/pdf/2009.01555.pdf},
     talk = {https://slideslive.com/38954141/sampleefficient-automated-deep-reinforcement-learning},
     blog = {https://www.automl.org/blog-autorl},
     abstract = "Despite significant progress in challenging problems across various domains, applying state-of-the-art deep reinforcement learning (RL) algorithms remains challenging due to their sensitivity to the choice of hyperparameters. This sensitivity can partly be attributed to the non-stationarity of the RL problem, potentially requiring different hyperparameter settings at various stages of the learning process. Additionally, in the RL setting, hyperparameter optimization (HPO) requires a large number of environment interactions, hindering the transfer of the successes in RL to real-world applications. In this work, we tackle the issues of sample-efficient and dynamic HPO in RL. We propose a population-based automated RL (AutoRL) framework to meta-optimize arbitrary off-policy RL algorithms. In this framework, we optimize the hyperparameters and also the neural architecture while simultaneously training the agent. By sharing the collected experience across the population, we substantially increase the sample efficiency of the meta-optimization. We demonstrate the capabilities of our sample-efficient AutoRL approach in a case study with the popular TD3 algorithm in the MuJoCo benchmark suite, where we reduce the number of environment interactions needed for meta-optimization by up to an order of magnitude compared to population-based training."
@@ -253,7 +259,7 @@
     year = {2021},
     bibtex_show={true},
     booktitle = {Proceedings of the 24th International Conference on Artificial Intelligence and Statistics (AISTATS)'21},
-    pdf = {zhang21n.pdf},
+    pdf = {paper/zhang21n.pdf},
     supp = {http://proceedings.mlr.press/v130/zhang21n/zhang21n-supp.zip},
     blog = {https://bair.berkeley.edu/blog/2021/04/19/mbrl/},
     talk = {https://www.youtube.com/watch?v=lH0mgnjr1v4},
@@ -296,7 +302,7 @@
     booktitle = {AAAI workshop on Meta-Learning Challenges},
     journal = {AAAI workshop on Meta-Learning Challenges},
     code = {https://colab.research.google.com/drive/1_RZd6O3rxZUHJlET9-3wYwV1WJJsLSJb?usp=sharing},
-    pdf = {21-OAML-MetaAAAI.pdf},
+    pdf = {paper/21-OAML-MetaAAAI.pdf},
     abstract = "t the heart of the standard deep learning training loop is
     a greedy gradient step minimizing a given loss. We propose
     to add a second step to maximize training generalization. To
@@ -318,6 +324,7 @@
     year = {2020},
     bibtex_show={true},
     journal = {arXiv:2012.08180 [cs.LG]},
+    pdf = {https://arxiv.org/pdf/2012.08180.pdf},
     arxiv = {2012.08180},
     code = "https://github.com/automl/Squirrel-Optimizer-BBO-NeurIPS20-automlorg",
     talk = "https://bbochallenge.com/virtualroom/",
@@ -327,6 +334,7 @@
 
 @InProceedings{speck-et-al-icaps2020wsprl,
     arxiv =        "2006.08246v2",
+    pdf =           {https://arxiv.org/pdf/2006.08246v2.pdf},
     bibtex_show={true},
     code =         "https://github.com/speckdavid/rl-plan",
     title =        "Learning Heuristic Selection with Dynamic Algorithm Configuration",
@@ -372,9 +380,9 @@
     code = {https://github.com/automl/LTO-CMA},
     talk = {https://drive.google.com/file/d/1bhrbdUu-U76iJJtKYhPV3sdo4nI6N6XO/view},
     blog = {https://www.automl.org/learning-step-size-adaptation-in-cma-es/},
-    pdf = {20-PPSN-LTO-CMA.pdf},
+    pdf = {paper/20-PPSN-LTO-CMA.pdf},
     note = {Joint first authorship: Gresa Shala \& André Biedenkapp},
-    poster = {20-PPSN-LTO-CMA-poster.pdf},
+    poster = {poster/20-PPSN-LTO-CMA-poster.pdf},
     abstract = {An algorithm’s parameter setting often affects its ability to
     solve a given problem, e.g., population-size, mutation-rate or crossover-
     rate of an evolutionary algorithm. Furthermore, some parameters have
@@ -400,8 +408,8 @@
     booktitle = {Workshop on Inductive Biases, Invariances and Generalization in RL (BIG@ICML'20)},
     code = {https://github.com/automl/TabularTempoRL},
     talk = {https://slideslive.com/38931351/towards-temporl-learning-when-to-act?ref=speaker-36467},
-    pdf = {20-BIG-TempoRL.pdf},
-    slides = {20-BIG-TempoRL-slides.pdf},
+    pdf = {paper/20-BIG-TempoRL.pdf},
+    slides = {slides/20-BIG-TempoRL-slides.pdf},
     abstract = "Reinforcement Learning is a powerful approach
     to learning behaviour through interactions with
     an environment. However, behaviours are learned
@@ -425,7 +433,7 @@
     code = {https://github.com/automl/SPaCE},
     booktitle = {Workshop on Inductive Biases, Invariances and Generalization in RL (BIG@ICML'20)},
     talk = "https://slideslive.com/38931344/towards-selfpaced-context-evaluation-for-contextual-reinforcement-learning?ref=speaker-36467",
-    pdf = "20-BIG-SPaCE.pdf",
+    pdf = "paper/20-BIG-SPaCE.pdf",
     bibtex_show={true},
     abstract = "Reinforcement Learning has performed very well
     on games and lab-based tasks. However, learning policies across a distribution of instances of
@@ -454,7 +462,8 @@
     code = {https://github.com/automl/DAC},
     blog = {https://www.automl.org/dynamic-algorithm-configuration/},
     supp = {https://github.com/automl/DAC/blob/master/Appendix.pdf},
-    pdf = {20-ecai-dac.pdf},
+    pdf = {paper/20-ecai-dac.pdf},
+    slides = {slides/2020_DAC@ECAI.pdf},
     selected = {true},
     abstract = "The performance of many algorithms in the fields of
     hard combinatorial problem solving, machine learning or AI in general depends on parameter tuning. Automated methods have been
@@ -485,6 +494,9 @@
     arxiv = {1906.07644},
     bibtex_show={true},
     website = {https://www.automl.org/automated-algorithm-design/dac/},
+    pdf = {https://arxiv.org/pdf/1906.07644.pdf},
+    poster = "poster/Whitebox@COSEAL_poster.pdf",
+    slides = {slides/2019_DSO_WBforAlgorithmControl.pdf},
     abstract = "The performance of many algorithms in the fields of hard combinatorial problem solving, machine learning or AI in general depends on tuned hyperparameter configurations. Automated methods have been proposed to alleviate users from the tedious and error-prone task of manually searching for performance-optimized configurations across a set of problem instances. However there is still a lot of untapped potential through adjusting an algorithm's hyperparameters online since different hyperparameters are potentially optimal at different stages of the algorithm. We formulate the problem of adjusting an algorithm's hyperparameters for a given instance on the fly as a contextual MDP, making reinforcement learning (RL) the prime candidate to solve the resulting algorithm control problem in a data-driven way. Furthermore, inspired by applications of algorithm configuration, we introduce new white-box benchmarks suitable to study algorithm control. We show that on short sequences, algorithm configuration is a valid choice, but that with increasing sequence length a black-box view on the problem quickly becomes infeasible and RL performs better."
 }
 
@@ -495,6 +507,7 @@
     bibtex_show={true},
     journal = {arXiv:1908.06756 [cs.LG]},
     arxiv = {arXiv:1908.06756},
+    pdf = {https://arxiv.org/pdf/1908.06756.pdf},
     code  = {https://github.com/automl/BOAH},
     website = {https://www.ml4aad.org/ixautoml/boah},
     abstract = {Hyperparameter optimization and neural architecture search can become prohibitively expensive for regular black-box Bayesian optimization because the training and evaluation of a single model can easily take several hours. To overcome this, we introduce a comprehensive tool suite for effective multi-fidelity Bayesian optimization and the analysis of its runs. The suite, written in Python, provides a simple way to specify complex design spaces, a robust and efficient combination of Bayesian optimization and HyperBand, and a comprehensive analysis of the optimization process and its outcomes.}
@@ -507,7 +520,8 @@
     bibtex_show={true},
     booktitle = {IJCAI 2019 DSO Workshop},
     arxiv = {1908.06674},
-    slides = {19-DSO_BOBO-slides.pdf},
+    pdf = {https://arxiv.org/pdf/1908.06674.pdf},
+    slides = {slides/19-DSO_BOBO-slides.pdf},
     abstract = "Bayesian Optimization (BO) is a common approach for hyperparameter optimization (HPO) in automated machine learning. Although it is well-accepted that HPO is crucial to obtain well-performing machine learning models, tuning BO's own hyperparameters is often neglected. In this paper, we empirically study the impact of optimizing BO's own hyperparameters and the transferability of the found settings using a wide range of benchmarks, including artificial functions, HPO and HPO combined with neural architecture search. In particular, we show (i) that tuning can improve the any-time performance of different BO approaches, that optimized BO settings also perform well (ii) on similar problems and (iii) partially even on problems from other problem families, and (iv) which BO hyperparameters are most important."
 }
 
@@ -517,8 +531,8 @@
     year = {2018},
     bibtex_show={true},
     booktitle = {Proceedings of the International Conference on Learning and Intelligent Optimization (LION'18)},
-    pdf       = {18-LION12-CAVE.pdf},
-    slides    = {18-LION12-CAVE-slides.pdf},
+    pdf       = {paper/18-LION12-CAVE.pdf},
+    slides    = {slides/18-LION12-CAVE-slides.pdf},
     code      = {https://github.com/automl/CAVE},
     website   = {https://www.automl.org/ixautoml/cave/},
     talk      = {https://drive.google.com/file/d/1lNu6sZGB3lcr6fYI1tzLOJzILISO9WE1/view},
@@ -545,8 +559,8 @@
     bibtex_show={true},
     booktitle = {Proceedings of the Thirty-First Conference on Artificial Intelligence (AAAI'17)},
     pages =     {773--779},
-    poster =    "surrogate_ablation_aaai17_poster.pdf",
-    pdf =       "surrogate_ablation_aaai17.pdf",
+    poster =    "poster/surrogate_ablation_aaai17_poster.pdf",
+    pdf =       "paper/surrogate_ablation_aaai17.pdf",
     code =      "https://bitbucket.org/biedenka/ablation/src/master/",
     abstract =  "To achieve peak performance, it is often necessary to adjust the parameters of a given algorithm to the class of problem instances to be solved; this is known to be the case for popular solvers for a broad range of AI problems, including AI planning, propositional satisfiability (SAT) and answer set programming (ASP). To avoid tedious and often highly sub-optimal manual tuning of such parameters by means of ad-hoc methods, general-purpose algorithm configuration procedures can be used to automatically find performance-optimizing parameter settings. While impressive performance gains are often achieved in this manner, additional, potentially costly parameter importance analysis is required to gain insights into what parameter changes are most responsible for those improvements. Here, we show how the running time cost of ablation analysis, a well-known general-purpose approach for assessing parameter importance, can be reduced substantially by using regression models of algorithm performance constructed from data collected during the configuration process. In our experiments, we demonstrate speed-up factors between 33 and 14 727 for ablation analysis on various configuration scenarios from AI planning, SAT, ASP and mixed integer programming (MIP)."
 }
