--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,34 @@
 ---
 ---
+@phdthesis{biedenkapp22,
+title = {Dynamic Algorithm Configuration by Reinforcement Learning},
+author = {André Biedenkapp},
+year = {2022},
+address = {Freiburg, Germany},
+school = {University of Freiburg, Department of Computer Science, Machine Learning Chair},
+note = {Grade: Summa Cum Laude (best possible grade)},
+pdf = {https://ml.informatik.uni-freiburg.de/wp-content/uploads/2022/11/2022_Dissertation_Andre_Biedenkapp.pdf}
+}
+
+@inproceedings{shala-metalearn22a,
+    title = {AutoRL-Bench 1.0},
+    author = {Gresa Shala and Sebastian Pineda Arango and André Biedenkapp and Frank Hutter and Josif Grabocka},
+    year = {2022},
+    booktitle = {Workshop on Meta-Learning (MetaLearn@NeurIPS'22)},
+    bibtex_show={true},
+    pdf = {https://openreview.net/forum?id=RyAl60VhTcG}
+}
+
+
+@inproceedings{shala-metalearn22b,
+    title = {Gray-Box Gaussian Processes for Automated Reinforcement Learning},
+    author = {Gresa Shala and André Biedenkapp and Frank Hutter and Josif Grabocka},
+    year = {2022},
+    booktitle = {Workshop on Meta-Learning (MetaLearn@NeurIPS'22)},
+    bibtex_show={true},
+    pdf = {https://openreview.net/forum?id=oJp7uTL7ox-}
+}
+
 @inproceedings{sass-realml22a,
     title = {DeepCAVE: An Interactive Analysis Tool for Automated Machine Learning},
     author = {René Sass and Eddie Bergman and André Biedenkapp and Frank Hutter and Marius Lindauer},
